syntax = "proto3";
package virtengine.fraud.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/msg/v1/msg.proto";
import "amino/amino.proto";
import "virtengine/fraud/v1/types.proto";
import "virtengine/fraud/v1/params.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/fraud/v1";

// Msg defines the fraud Msg service
service Msg {
  option (cosmos.msg.v1.service) = true;

  // SubmitFraudReport submits a new fraud report
  rpc SubmitFraudReport(MsgSubmitFraudReport) returns (MsgSubmitFraudReportResponse);

  // AssignModerator assigns a moderator to a fraud report
  rpc AssignModerator(MsgAssignModerator) returns (MsgAssignModeratorResponse);

  // UpdateReportStatus updates the status of a fraud report
  rpc UpdateReportStatus(MsgUpdateReportStatus) returns (MsgUpdateReportStatusResponse);

  // ResolveFraudReport resolves a fraud report with action
  rpc ResolveFraudReport(MsgResolveFraudReport) returns (MsgResolveFraudReportResponse);

  // RejectFraudReport rejects a fraud report
  rpc RejectFraudReport(MsgRejectFraudReport) returns (MsgRejectFraudReportResponse);

  // EscalateFraudReport escalates a fraud report to admin
  rpc EscalateFraudReport(MsgEscalateFraudReport) returns (MsgEscalateFraudReportResponse);

  // UpdateParams updates module parameters (governance only)
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
}

// MsgSubmitFraudReport defines the message for submitting a fraud report
message MsgSubmitFraudReport {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "reporter";
  option (amino.name) = "fraud/MsgSubmitFraudReport";

  // Reporter is the provider address submitting the report
  string reporter = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "reporter",
    (gogoproto.moretags) = "yaml:\"reporter\""
  ];

  // ReportedParty is the address of the party being reported
  string reported_party = 2 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "reported_party",
    (gogoproto.moretags) = "yaml:\"reported_party\""
  ];

  // Category is the type of fraud being reported
  FraudCategory category = 3 [
    (gogoproto.jsontag) = "category",
    (gogoproto.moretags) = "yaml:\"category\""
  ];

  // Description is the detailed description of the fraud
  string description = 4 [
    (gogoproto.jsontag) = "description",
    (gogoproto.moretags) = "yaml:\"description\""
  ];

  // Evidence contains encrypted evidence attachments
  repeated EncryptedEvidence evidence = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "evidence",
    (gogoproto.moretags) = "yaml:\"evidence\""
  ];

  // RelatedOrderIDs are optional order IDs related to this fraud
  repeated string related_order_ids = 6 [
    (gogoproto.jsontag) = "related_order_ids,omitempty",
    (gogoproto.moretags) = "yaml:\"related_order_ids\""
  ];
}

// MsgSubmitFraudReportResponse is the response for MsgSubmitFraudReport
message MsgSubmitFraudReportResponse {
  // ReportID is the unique identifier for the submitted report
  string report_id = 1 [
    (gogoproto.jsontag) = "report_id",
    (gogoproto.moretags) = "yaml:\"report_id\""
  ];
}

// MsgAssignModerator defines the message for assigning a moderator to a report
message MsgAssignModerator {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "moderator";
  option (amino.name) = "fraud/MsgAssignModerator";

  // Moderator is the moderator performing the assignment
  string moderator = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "moderator",
    (gogoproto.moretags) = "yaml:\"moderator\""
  ];

  // ReportID is the fraud report ID to assign
  string report_id = 2 [
    (gogoproto.jsontag) = "report_id",
    (gogoproto.moretags) = "yaml:\"report_id\""
  ];

  // AssignTo is the moderator to assign (can be self)
  string assign_to = 3 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "assign_to",
    (gogoproto.moretags) = "yaml:\"assign_to\""
  ];
}

// MsgAssignModeratorResponse is the response for MsgAssignModerator
message MsgAssignModeratorResponse {}

// MsgUpdateReportStatus defines the message for updating a report's status
message MsgUpdateReportStatus {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "moderator";
  option (amino.name) = "fraud/MsgUpdateReportStatus";

  // Moderator is the moderator performing the update
  string moderator = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "moderator",
    (gogoproto.moretags) = "yaml:\"moderator\""
  ];

  // ReportID is the fraud report ID
  string report_id = 2 [
    (gogoproto.jsontag) = "report_id",
    (gogoproto.moretags) = "yaml:\"report_id\""
  ];

  // NewStatus is the new status for the report
  FraudReportStatus new_status = 3 [
    (gogoproto.jsontag) = "new_status",
    (gogoproto.moretags) = "yaml:\"new_status\""
  ];

  // Notes are optional notes about the status change
  string notes = 4 [
    (gogoproto.jsontag) = "notes,omitempty",
    (gogoproto.moretags) = "yaml:\"notes\""
  ];
}

// MsgUpdateReportStatusResponse is the response for MsgUpdateReportStatus
message MsgUpdateReportStatusResponse {}

// MsgResolveFraudReport defines the message for resolving a fraud report
message MsgResolveFraudReport {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "moderator";
  option (amino.name) = "fraud/MsgResolveFraudReport";

  // Moderator is the moderator resolving the report
  string moderator = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "moderator",
    (gogoproto.moretags) = "yaml:\"moderator\""
  ];

  // ReportID is the fraud report ID
  string report_id = 2 [
    (gogoproto.jsontag) = "report_id",
    (gogoproto.moretags) = "yaml:\"report_id\""
  ];

  // Resolution is the resolution type
  ResolutionType resolution = 3 [
    (gogoproto.jsontag) = "resolution",
    (gogoproto.moretags) = "yaml:\"resolution\""
  ];

  // Notes are resolution notes
  string notes = 4 [
    (gogoproto.jsontag) = "notes",
    (gogoproto.moretags) = "yaml:\"notes\""
  ];
}

// MsgResolveFraudReportResponse is the response for MsgResolveFraudReport
message MsgResolveFraudReportResponse {}

// MsgRejectFraudReport defines the message for rejecting a fraud report
message MsgRejectFraudReport {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "moderator";
  option (amino.name) = "fraud/MsgRejectFraudReport";

  // Moderator is the moderator rejecting the report
  string moderator = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "moderator",
    (gogoproto.moretags) = "yaml:\"moderator\""
  ];

  // ReportID is the fraud report ID
  string report_id = 2 [
    (gogoproto.jsontag) = "report_id",
    (gogoproto.moretags) = "yaml:\"report_id\""
  ];

  // Notes are rejection notes
  string notes = 3 [
    (gogoproto.jsontag) = "notes",
    (gogoproto.moretags) = "yaml:\"notes\""
  ];
}

// MsgRejectFraudReportResponse is the response for MsgRejectFraudReport
message MsgRejectFraudReportResponse {}

// MsgEscalateFraudReport defines the message for escalating a fraud report
message MsgEscalateFraudReport {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "moderator";
  option (amino.name) = "fraud/MsgEscalateFraudReport";

  // Moderator is the moderator escalating the report
  string moderator = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "moderator",
    (gogoproto.moretags) = "yaml:\"moderator\""
  ];

  // ReportID is the fraud report ID
  string report_id = 2 [
    (gogoproto.jsontag) = "report_id",
    (gogoproto.moretags) = "yaml:\"report_id\""
  ];

  // Reason is the escalation reason
  string reason = 3 [
    (gogoproto.jsontag) = "reason",
    (gogoproto.moretags) = "yaml:\"reason\""
  ];
}

// MsgEscalateFraudReportResponse is the response for MsgEscalateFraudReport
message MsgEscalateFraudReportResponse {}

// MsgUpdateParams defines the message for updating module parameters
message MsgUpdateParams {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "fraud/MsgUpdateParams";

  // Authority is the address that controls the module (defaults to x/gov)
  string authority = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "authority",
    (gogoproto.moretags) = "yaml:\"authority\""
  ];

  // Params are the new parameters
  Params params = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "params",
    (gogoproto.moretags) = "yaml:\"params\""
  ];
}

// MsgUpdateParamsResponse is the response for MsgUpdateParams
message MsgUpdateParamsResponse {}
